@startuml

!theme amiga

class Config {

	header string
	rawInput string

	commands []command
	position CMD
	set *command

	flagset *flag.FlagSet

	errs []error

	Command(cmd, usage string) (CMD)
	Compose(opts ...Option) error
	IsSet(flag CMD) (string, CMD)
	Cmd() CMD
}

class command {
	flag CMD
	cmd string
	usage string
	seen []string
	options []*Option
}

Config <|-- command 
Config *-- command 
command o-- Option

class Option {
	Flag string
	Type
	Value flag.Value
	Var interface{}
	Usage   string
	data interface{}
	Default interface{}
	Commands CMD
	err error
	Check ckFunc
}

note "The first command defined represents the programs default flagSet,\n used to describe flags for the programs cli command. Each\n subsequent FlagSet represent a sub command; When the programs\n cli command is followed by a sub-command the user may then\n access any combination of the sub-set of flags that have been\n defined along with their accompanying documentation." as N1

@enduml
